--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,174 @@ MyApi_Test/obj/Debug/net8.0/MyApi_Test.assets.cache
 MyApi_Test/obj/Debug/net8.0/MyApi_Test.csproj.AssemblyReference.cache
 MyApi_Test/obj/Debug/net8.0/MyApi_Test.GeneratedMSBuildEditorConfig.editorconfig
 MyApi_Test/obj/Debug/net8.0/MyApi_Test.GlobalUsings.g.cs
+MyApi/bin/Debug/net8.0/appsettings.Development.json
+MyApi/bin/Debug/net8.0/appsettings.json
+MyApi/bin/Debug/net8.0/Azure.Core.dll
+MyApi/bin/Debug/net8.0/Azure.Identity.dll
+MyApi/bin/Debug/net8.0/Humanizer.dll
+MyApi/bin/Debug/net8.0/Microsoft.AspNetCore.OpenApi.dll
+MyApi/bin/Debug/net8.0/Microsoft.Bcl.AsyncInterfaces.dll
+MyApi/bin/Debug/net8.0/Microsoft.Build.Locator.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.CSharp.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.CSharp.Workspaces.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.Workspaces.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.dll
+MyApi/bin/Debug/net8.0/Microsoft.CodeAnalysis.Workspaces.MSBuild.dll
+MyApi/bin/Debug/net8.0/Microsoft.Data.SqlClient.dll
+MyApi/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Design.dll
+MyApi/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.dll
+MyApi/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Relational.dll
+MyApi/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Caching.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Caching.Memory.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Configuration.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.DependencyModel.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Logging.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Logging.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Options.dll
+MyApi/bin/Debug/net8.0/Microsoft.Extensions.Primitives.dll
+MyApi/bin/Debug/net8.0/Microsoft.Identity.Client.dll
+MyApi/bin/Debug/net8.0/Microsoft.Identity.Client.Extensions.Msal.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.Abstractions.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.JsonWebTokens.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.Logging.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.Protocols.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+MyApi/bin/Debug/net8.0/Microsoft.IdentityModel.Tokens.dll
+MyApi/bin/Debug/net8.0/Microsoft.OpenApi.dll
+MyApi/bin/Debug/net8.0/Microsoft.SqlServer.Server.dll
+MyApi/bin/Debug/net8.0/Microsoft.Win32.SystemEvents.dll
+MyApi/bin/Debug/net8.0/Mono.TextTemplating.dll
+MyApi/bin/Debug/net8.0/MyApi.deps.json
+MyApi/bin/Debug/net8.0/MyApi.dll
+MyApi/bin/Debug/net8.0/MyApi.exe
+MyApi/bin/Debug/net8.0/MyApi.pdb
+MyApi/bin/Debug/net8.0/MyApi.runtimeconfig.json
+MyApi/bin/Debug/net8.0/MyApi.staticwebassets.endpoints.json
+MyApi/bin/Debug/net8.0/MySqlConnector.dll
+MyApi/bin/Debug/net8.0/Newtonsoft.Json.dll
+MyApi/bin/Debug/net8.0/Pomelo.EntityFrameworkCore.MySql.dll
+MyApi/bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+MyApi/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+MyApi/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+MyApi/bin/Debug/net8.0/System.ClientModel.dll
+MyApi/bin/Debug/net8.0/System.CodeDom.dll
+MyApi/bin/Debug/net8.0/System.Composition.AttributedModel.dll
+MyApi/bin/Debug/net8.0/System.Composition.Convention.dll
+MyApi/bin/Debug/net8.0/System.Composition.Hosting.dll
+MyApi/bin/Debug/net8.0/System.Composition.Runtime.dll
+MyApi/bin/Debug/net8.0/System.Composition.TypedParts.dll
+MyApi/bin/Debug/net8.0/System.Configuration.ConfigurationManager.dll
+MyApi/bin/Debug/net8.0/System.Diagnostics.DiagnosticSource.dll
+MyApi/bin/Debug/net8.0/System.Drawing.Common.dll
+MyApi/bin/Debug/net8.0/System.Formats.Asn1.dll
+MyApi/bin/Debug/net8.0/System.IdentityModel.Tokens.Jwt.dll
+MyApi/bin/Debug/net8.0/System.IO.Pipelines.dll
+MyApi/bin/Debug/net8.0/System.Memory.Data.dll
+MyApi/bin/Debug/net8.0/System.Runtime.Caching.dll
+MyApi/bin/Debug/net8.0/System.Security.Cryptography.ProtectedData.dll
+MyApi/bin/Debug/net8.0/System.Security.Permissions.dll
+MyApi/bin/Debug/net8.0/System.Text.Encodings.Web.dll
+MyApi/bin/Debug/net8.0/System.Text.Json.dll
+MyApi/bin/Debug/net8.0/System.Windows.Extensions.dll
+MyApi/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/cs/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/de/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/es/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/fr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/it/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/ja/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/ko/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/pl/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/pt-BR/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/ru/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/runtimes/browser/lib/net8.0/System.Text.Encodings.Web.dll
+MyApi/bin/Debug/net8.0/runtimes/unix/lib/net6.0/Microsoft.Data.SqlClient.dll
+MyApi/bin/Debug/net8.0/runtimes/unix/lib/net6.0/System.Drawing.Common.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/Microsoft.Data.SqlClient.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/Microsoft.Win32.SystemEvents.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Drawing.Common.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Runtime.Caching.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Security.Cryptography.ProtectedData.dll
+MyApi/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Windows.Extensions.dll
+MyApi/bin/Debug/net8.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi/bin/Debug/net8.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi/bin/Debug/net8.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi/bin/Debug/net8.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/tr/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hans/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.CSharp.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.Workspaces.MSBuild.BuildHost.resources.dll
+MyApi/bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.Workspaces.resources.dll
+MyApi/obj/Debug/net8.0/apphost.exe
+MyApi/obj/Debug/net8.0/MyApi.csproj.CoreCompileInputs.cache
+MyApi/obj/Debug/net8.0/MyApi.csproj.FileListAbsolute.txt
+MyApi/obj/Debug/net8.0/MyApi.csproj.Up2Date
+MyApi/obj/Debug/net8.0/MyApi.dll
+MyApi/obj/Debug/net8.0/MyApi.genruntimeconfig.cache
+MyApi/obj/Debug/net8.0/MyApi.MvcApplicationPartsAssemblyInfo.cache
+MyApi/obj/Debug/net8.0/MyApi.MvcApplicationPartsAssemblyInfo.cs
+MyApi/obj/Debug/net8.0/MyApi.pdb
+MyApi/obj/Debug/net8.0/MyApi.sourcelink.json
+MyApi/obj/Debug/net8.0/rjsmcshtml.dswa.cache.json
+MyApi/obj/Debug/net8.0/rjsmrazor.dswa.cache.json
+MyApi/obj/Debug/net8.0/rpswa.dswa.cache.json
+MyApi/obj/Debug/net8.0/staticwebassets.build.endpoints.json
+MyApi/obj/Debug/net8.0/staticwebassets.build.json
+MyApi/obj/Debug/net8.0/staticwebassets.build.json.cache
+MyApi/obj/Debug/net8.0/swae.build.ex.cache
+MyApi/obj/Debug/net8.0/ref/MyApi.dll
+MyApi/obj/Debug/net8.0/refint/MyApi.dll
