Fix directory name for test command

--- a/.github/workflows/be_cicd.yml
+++ b/.github/workflows/be_cicd.yml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Test
         run: |
-         cd MyAPI_Test
+         cd MyApi_Test
          dotnet test ./MyApi_Test --no-build --verbosity normal
