--- a/.github/workflows/be_cicd.yml
+++ b/.github/workflows/be_cicd.yml
@@ -25,4 +25,5 @@ jobs:
         run: dotnet build ./MyApi --configuration Release
 
       - name: Test (Xunit)
-        run: dotnet test MyApi_Test/MyApi_Test.csproj --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
+        run: dotnet test MyApi_Test/MyApi_Test.csproj --no-build --verbosity normal
+
