--- a/.github/workflows/be_cicd.yml
+++ b/.github/workflows/be_cicd.yml
@@ -25,5 +25,7 @@ jobs:
         run: dotnet build ./MyApi --configuration Release
 
       - name: Test (Xunit)
-        run: dotnet test ./MyApi_Test --no-build --verbosity normal
+        run: |
+          cd MyApi_Test
+          run: dotnet test ./MyApi_Test --no-build --verbosity normal
 
