--- a/.github/workflows/be_cicd.yml
+++ b/.github/workflows/be_cicd.yml
@@ -25,5 +25,5 @@ jobs:
         run: dotnet build --no-restore ./MyApi/MyApi.csproj --configuration Release
 
       - name: Test (Xunit)
-        run: dotnet test ./MyApi.Tests/MyApi.Tests.csproj --no-build --verbosity normal
+        run: dotnet test ./MyApi_Tests/MyApi_Tests.csproj --no-build --verbosity normal
 
