--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,168 @@ MyApi/obj/Debug/net8.0/refint/MyApi.dll
 MyApi/obj/Debug/net8.0/staticwebassets/msbuild.build.MyApi.props
 MyApi/obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.MyApi.props
 MyApi/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.MyApi.props
+MyApi_Test/bin/Debug/net8.0/appsettings.Development.json
+MyApi_Test/bin/Debug/net8.0/appsettings.json
+MyApi_Test/bin/Debug/net8.0/Azure.Core.dll
+MyApi_Test/bin/Debug/net8.0/Azure.Identity.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.AspNetCore.OpenApi.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Bcl.AsyncInterfaces.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Data.SqlClient.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.Relational.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Caching.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Caching.Memory.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Configuration.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.DependencyInjection.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Logging.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Logging.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Options.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Extensions.Primitives.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Identity.Client.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Identity.Client.Extensions.Msal.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.Abstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.JsonWebTokens.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.Logging.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.Protocols.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.IdentityModel.Tokens.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.OpenApi.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.SqlServer.Server.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.TestPlatform.CommunicationUtilities.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.TestPlatform.CoreUtilities.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.TestPlatform.CrossPlatEngine.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.TestPlatform.PlatformAbstractions.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.TestPlatform.Utilities.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.VisualStudio.CodeCoverage.Shim.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.VisualStudio.TestPlatform.Common.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.VisualStudio.TestPlatform.ObjectModel.dll
+MyApi_Test/bin/Debug/net8.0/Microsoft.Win32.SystemEvents.dll
+MyApi_Test/bin/Debug/net8.0/MyApi_Test.deps.json
+MyApi_Test/bin/Debug/net8.0/MyApi_Test.dll
+MyApi_Test/bin/Debug/net8.0/MyApi_Test.pdb
+MyApi_Test/bin/Debug/net8.0/MyApi_Test.runtimeconfig.json
+MyApi_Test/bin/Debug/net8.0/MyApi.deps.json
+MyApi_Test/bin/Debug/net8.0/MyApi.dll
+MyApi_Test/bin/Debug/net8.0/MyApi.exe
+MyApi_Test/bin/Debug/net8.0/MyApi.pdb
+MyApi_Test/bin/Debug/net8.0/MyApi.runtimeconfig.json
+MyApi_Test/bin/Debug/net8.0/MySqlConnector.dll
+MyApi_Test/bin/Debug/net8.0/Newtonsoft.Json.dll
+MyApi_Test/bin/Debug/net8.0/NuGet.Frameworks.dll
+MyApi_Test/bin/Debug/net8.0/Pomelo.EntityFrameworkCore.MySql.dll
+MyApi_Test/bin/Debug/net8.0/Swashbuckle.AspNetCore.Swagger.dll
+MyApi_Test/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+MyApi_Test/bin/Debug/net8.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+MyApi_Test/bin/Debug/net8.0/System.ClientModel.dll
+MyApi_Test/bin/Debug/net8.0/System.Configuration.ConfigurationManager.dll
+MyApi_Test/bin/Debug/net8.0/System.Diagnostics.DiagnosticSource.dll
+MyApi_Test/bin/Debug/net8.0/System.Drawing.Common.dll
+MyApi_Test/bin/Debug/net8.0/System.Formats.Asn1.dll
+MyApi_Test/bin/Debug/net8.0/System.IdentityModel.Tokens.Jwt.dll
+MyApi_Test/bin/Debug/net8.0/System.IO.Pipelines.dll
+MyApi_Test/bin/Debug/net8.0/System.Memory.Data.dll
+MyApi_Test/bin/Debug/net8.0/System.Runtime.Caching.dll
+MyApi_Test/bin/Debug/net8.0/System.Security.Cryptography.ProtectedData.dll
+MyApi_Test/bin/Debug/net8.0/System.Security.Permissions.dll
+MyApi_Test/bin/Debug/net8.0/System.Text.Encodings.Web.dll
+MyApi_Test/bin/Debug/net8.0/System.Text.Json.dll
+MyApi_Test/bin/Debug/net8.0/System.Windows.Extensions.dll
+MyApi_Test/bin/Debug/net8.0/testhost.dll
+MyApi_Test/bin/Debug/net8.0/testhost.exe
+MyApi_Test/bin/Debug/net8.0/xunit.abstractions.dll
+MyApi_Test/bin/Debug/net8.0/xunit.assert.dll
+MyApi_Test/bin/Debug/net8.0/xunit.core.dll
+MyApi_Test/bin/Debug/net8.0/xunit.execution.dotnet.dll
+MyApi_Test/bin/Debug/net8.0/xunit.runner.reporters.netcoreapp10.dll
+MyApi_Test/bin/Debug/net8.0/xunit.runner.utility.netcoreapp10.dll
+MyApi_Test/bin/Debug/net8.0/xunit.runner.visualstudio.dotnetcore.testadapter.dll
+MyApi_Test/bin/Debug/net8.0/cs/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/cs/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/cs/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/cs/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/cs/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/de/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/de/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/de/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/de/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/de/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/es/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/es/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/es/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/es/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/es/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/fr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/fr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/fr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/fr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/fr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/it/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/it/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/it/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/it/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/it/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/ja/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ja/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ja/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/ja/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/ja/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/ko/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ko/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ko/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/ko/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/ko/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/pl/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/pl/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/pl/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/pl/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/pl/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/pt-BR/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/pt-BR/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/pt-BR/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/pt-BR/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/pt-BR/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/ru/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ru/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/ru/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/ru/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/ru/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/browser/lib/net8.0/System.Text.Encodings.Web.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/unix/lib/net6.0/Microsoft.Data.SqlClient.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/unix/lib/net6.0/System.Drawing.Common.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/Microsoft.Data.SqlClient.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/Microsoft.Win32.SystemEvents.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Drawing.Common.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Runtime.Caching.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Security.Cryptography.ProtectedData.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win/lib/net6.0/System.Windows.Extensions.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi_Test/bin/Debug/net8.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+MyApi_Test/bin/Debug/net8.0/tr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/tr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/tr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/tr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/tr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hans/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hans/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hans/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hant/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hant/Microsoft.TestPlatform.CoreUtilities.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hant/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+MyApi_Test/bin/Debug/net8.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.csproj.CoreCompileInputs.cache
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.csproj.FileListAbsolute.txt
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.csproj.Up2Date
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.dll
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.genruntimeconfig.cache
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.pdb
+MyApi_Test/obj/Debug/net8.0/MyApi_Test.sourcelink.json
+MyApi_Test/obj/Debug/net8.0/ref/MyApi_Test.dll
+MyApi_Test/obj/Debug/net8.0/refint/MyApi_Test.dll
